apps/forgejo/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: forgejo
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`git.trivernis.dev`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
    services:
    - name: forgejo-http
      port: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ssh
  namespace: forgejo
spec:
  entryPoints:
    - ssh
  routes:
  - match: HostSNI(`*`)
    services:
    - name: forgejo-ssh
      port: ssh
